edited technical language

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
     <article class="service-card">
       <img src="images/ppe.svg" alt="Biohazard cleanup gear">
       <h4>Decomposition & Unattended Death</h4>
-      <p>Comprehensive remediation, odor control, and sanitization for decomposition or unattended deaths.</p>
+      <p>Comprehensive remediation, odor control, and disinfection for decomposition or unattended deaths.</p>
     </article>
 
     <article class="service-card">
       <img src="images/hoarding.png" alt="Professional hoarding cleanup">
       <h4>Hoarding Cleanup</h4>
-      <p>Compassionate cleanup and deep sanitization to restore safety and livability in affected environments.</p>
+      <p>Compassionate cleanup and deep disinfection to restore safety and livability in affected environments.</p>
     </article>
   </section>
 </main>
