changed technical language

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <p class="lead" style="margin-top: 15px;">
-      We understand the emotional and physical challenges these situations bring. Every cleanup is handled discreetly, safely, and with the highest standards of biohazard remediation. From containment to odor control and full sanitization, your safety and peace of mind are our priority.
+      We understand the emotional and physical challenges these situations bring. Every cleanup is handled discreetly, safely, and with the highest standards of biohazard remediation. From containment to odor control and full disinfection, your safety and peace of mind are our priority.
     </p>
   </div>
 
