edited text language

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <aside class="card">
       <h3>Request a Call Back</h3>
-      <p>Fast response — fill out this form and we’ll contact you immediately.</p>
+      <p>Fast response — fill out this form and we’ll contact you as soon as possible.</p>
 
       <iframe name="hidden_iframe" style="display:none;"></iframe>
 
