--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="eyebrow">AMDECON CERTIFIED • LICENSED & INSURED • 24/7 EMERGENCY RESPONSE</div>
     <h2>Discreet. Compassionate. Professional.</h2>
     <p class="lead">
-      Hope Renewed LLC provides expert biohazard and trauma scene cleanup services across Conroe, Houston, and surrounding areas. 
+      Hope Renewed provides expert biohazard and trauma scene cleanup services across Conroe, Houston, and surrounding areas. 
       Our certified technicians respond 24/7 to crime scenes, unattended deaths, suicides, hoarding, and decomposition cases, ensuring a safe, thorough, and respectful restoration of safety to your property.
     </p>
 
