--- a/create-post.html
+++ b/create-post.html
@@ -32,7 +32,7 @@
 <button id="generate">Generate & Download Post</button>
 
 <script>
-const sheetUrl = "YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL"; // replace with your Apps Script URL
+const sheetUrl = "https://script.google.com/macros/s/AKfycbxRgJgTCBLzEb29OaEgHhPeslLBDpDS35JQiTIcykZlOnEikNy0cxDQlFRXye8QRzrd/exec"; // replace with your Apps Script URL
 
 function slugify(text){
   return text.toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/^-+|-+$/g,'');
@@ -60,7 +60,7 @@ document.getElementById('generate').addEventListener('click', async () => {
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>${title} | Hope Renewed LLC</title>
-<link rel="icon" href="images/logo.png" type="image/png">
+<link rel="icon" href="https://hope-renewed.us/images/logo.png" type="image/png">
 <style>
 body { font-family:'Inter',sans-serif; background:#f8fafc; color:#0b2545; line-height:1.6; margin:0; padding:0; }
 header { display:flex; justify-content: space-between; align-items:center; padding:20px 8%; background:#fff; box-shadow:0 4px 10px rgba(0,0,0,0.05); }
