fixed blog generator

--- a/create-post.html
+++ b/create-post.html
@@ -100,7 +100,7 @@ form.addEventListener('submit', function(e){
     <div class="hero-left">
       <div class="eyebrow">AMDECON CERTIFIED • LICENSED & INSURED • 24/7 EMERGENCY RESPONSE</div>
       <h2>${title}</h2>
-      ${excerpt ? `<p class="lead">${excerpt}</p>` : ''}
+      ${excerpt }
     </div>
   </section>
 
