--- a/create-post.html
+++ b/create-post.html
@@ -77,7 +77,7 @@ form.addEventListener('submit', function(e){
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>${title} | Hope Renewed LLC</title>
 <link rel="stylesheet" href="style.css" />
-<link rel="icon" href="https://hope-renewed.us/images/logo.png" type="image/png">
+<a href="https://hope-renewed.us/"><link rel="icon" href="https://hope-renewed.us/images/logo.png" type="image/png"></a>
 </head>
 <body>
 
