--- a/blogs/why-hiring-a-professional-biohazard-remediation-company-is-essential.html
+++ b/blogs/why-hiring-a-professional-biohazard-remediation-company-is-essential.html
@@ -15,7 +15,7 @@
 
 <header>
   <div class="brand">
-    <img src="https://hope-renewed.us/images/logo.png" alt="Hope Renewed LLC logo" class="logo">
+    <a href="https://hope-renewed.us/"><img src="https://hope-renewed.us/images/logo.png" alt="Hope Renewed LLC logo" class="logo"></a>
     <div>
       <p>Compassionate biohazard & trauma scene cleanup — Conroe, Houston & surrounding areas</p>
     </div>
