--- a/create-post.html
+++ b/create-post.html
@@ -87,7 +87,7 @@ form.addEventListener('submit', function(e){
 
 <header>
   <div class="brand">
-    <img src="https://hope-renewed.us/images/logo.png" alt="Hope Renewed LLC logo" class="logo">
+    <a href="https://hope-renewed.us/"><img src="https://hope-renewed.us/images/logo.png" alt="Hope Renewed LLC logo" class="logo"></a>
     <div>
       <p>Compassionate biohazard & trauma scene cleanup — Conroe, Houston & surrounding areas</p>
     </div>
