fixed home navigation

--- a/blogs/our-decomposition-cleanup-process.html
+++ b/blogs/our-decomposition-cleanup-process.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Our Decomposition Cleanup Process | Hope Renewed LLC</title>
 <link rel="stylesheet" href="style.css" />
-<a href="https://hope-renewed.us/"><link rel="icon" href="https://hope-renewed.us/images/logo.png" type="image/png"></a>
+<link rel="icon" href="https://hope-renewed.us/images/logo.png" type="image/png">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
 
 <header>
   <div class="brand">
-    <img src="https://hope-renewed.us/images/logo.png" alt="Hope Renewed LLC logo" class="logo">
+    <a href="https://hope-renewed.us/"><img src="https://hope-renewed.us/images/logo.png" alt="Hope Renewed LLC logo" class="logo"></a>
     <div>
       <p>Compassionate biohazard & trauma scene cleanup — Conroe, Houston & surrounding areas</p>
     </div>
