--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <header>
   <div class="brand">
-    <img src="images/logo.png" alt="Hope Renewed LLC logo" class="logo">
+    <a href="https://hope-renewed.us/"><img src="images/logo.png" alt="Hope Renewed LLC logo" class="logo"></a>
     <div>
       <p>Compassionate biohazard & trauma scene cleanup — Conroe, Houston & surrounding areas</p>
     </div>
