added mission statement

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     </div>
 
     <p class="lead" style="margin-top: 15px;">
-      We understand the emotional and physical challenges these situations bring. Every cleanup is handled discreetly, safely, and with the highest standards of biohazard remediation. From containment to odor control and full disinfection, your safety and peace of mind are our priority.
+      We understand the emotional and physical challenges these situations bring. Every cleanup is handled discreetly, safely, and with the highest standards of biohazard remediation. From containment to odor control and full disinfection, your safety and peace of mind are our priority.<br>
+      At Hope Renewed, our mission is to help families move forward with dignity, safety, and compassion. You don’t have to face this process alone—our team is here to help, day or night.
     </p>
   </div>
 
