--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
 
     <p class="lead" style="margin-top: 15px;">
       We understand the emotional and physical challenges these situations bring. Every cleanup is handled discreetly, safely, and with the highest standards of biohazard remediation. From containment to odor control and full disinfection, your safety and peace of mind are our priority.<br>
-      At Hope Renewed, our mission is to help families move forward with dignity, safety, and compassion. You don’t have to face this process alone—our team is here to help, day or night.
     </p>
+
+    <p class="mission" style="margin-top: 15px;">
+      <strong>Our Mission:</strong> To provide compassionate, professional biohazard cleanup services that restore safety and dignity to affected individuals and communities. We are dedicated to treating every situation with respect, ensuring thorough remediation, and supporting our clients through difficult times.
+    </p>
+
   </div>
 
     <aside class="card">
