--- a/blogs/suicide-cleanup-and-support-resources.html
+++ b/blogs/suicide-cleanup-and-support-resources.html
@@ -125,7 +125,8 @@
   </section>
 
   <p>
-    <em>At Hope Renewed, our mission is to help families move forward with dignity, safety, and compassion. You don’t have to face this process alone—our team is here to help, day or night.</em>
+    <em><strong>Our Mission:</strong> To provide compassionate, professional biohazard cleanup services that restore safety and dignity to affected individuals and communities. We are dedicated to treating every situation with respect, ensuring thorough remediation, and supporting our clients through difficult times.
+</em>
   </p>
 </article></div>
       </div>
